# canasta-openspiel

./: .gitignore  README.md  pyproject.toml
PLAN/: 01_requirements.md  MASTER_PLAN.md  NORTH_STAR.md
canasta/: __init__.py  canasta_game.py  cards.py  deck.py  melds.py  observer.py  scoring.py
canasta/ui/: __init__.py  base.py  cards.py  fixtures.py  html_renderer.py  rich_renderer.py  state_view.py  text_renderer.py
examples/: __init__.py  render_game.py  render_replay.py
renders/: all_fixtures.json  all_renders.txt  canasta.html  canasta.json  canasta.txt  early_game.html  early_game.json  early_game.txt  frozen_pile.html  frozen_pile.json  frozen_pile.txt  mid_game.html  mid_game.json  mid_game.txt  red_threes.html  red_threes.json  red_threes.txt  replay.html  terminal.html  terminal.json  terminal.txt
scripts/: generate_replay.py  preview_render.py
tests/: __init__.py  test_action_space.py  test_api_compliance.py  test_canasta_edge_cases.py  test_canasta_game.py  test_cards.py  test_deck.py  test_discard_phase.py  test_draw_phase.py  test_going_out.py  test_meld_phase.py  test_melds.py  test_multi_hand.py  test_observer.py  test_performance.py  test_red_three_edge_cases.py  test_scoring.py  test_serialization.py  test_single_hand.py  test_state_init.py  test_stock_exhaustion.py  test_ui_cards.py  test_ui_fixtures.py  test_ui_html_renderer.py  test_ui_rich_renderer.py  test_ui_state_view.py  test_ui_text_renderer.py
