[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canasta-openspiel"
version = "0.1.0"
description = "Canasta game implementation using OpenSpiel"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "open-spiel>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["canasta*"]
